<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/antiquePink"
    >


    <EditText
        android:id="@+id/edt_login_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="60dp"
        android:background="@color/white"
        android:hint="@string/login" />
    <EditText
        android:id="@+id/edt_password_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/Password"
        android:background="@color/white"
        android:layout_margin="20dp"
        />

    <LinearLayout
        android:layout_gravity="bottom"
        android:gravity="bottom"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:padding = "20dp"
        android:background="@color/antiquePink"
        >

        <Button
            android:id="@+id/btn_cancel_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Cancel"
            android:backgroundTint="@color/lightSeaGreen"
            android:textColor="@color/white"
            />

        <Button
            android:id="@+id/btn_enter_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/enter"
            android:backgroundTint="@color/lightSeaGreen"
            android:textColor="@color/white"
            />


    </LinearLayout>





</LinearLayout>